<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Efc</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="video">Video</string>
    <string name="Today">Today</string>
    <string name="Next">Next</string>
    <string name="back">back</string>
    <string name="Photo_count_message">Photo count message</string>
    <string name="audio">Audio</string>
    <string name="text">Text</string>
    <string name="retry">Retry</string>
    <string name="equipment_broadcast">EquipmentBroadcast</string>
    <string name="selection_disabled">Disabled</string>
    <string name="selection_default">Default</string>
    <string name="selection_default_none">Default (none)</string>
    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>
    <string name="enable_random_adaptation">Enable random adaptation</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="storage_permission_denied">Permission to access storage was denied</string>
    <string name="sample_list_load_error">One or more sample lists failed to load</string>
    <string name="facebook_app_id">173507396486976</string>
    <string name="day_name_format">EEE</string>
    <string name="invalid_date">Date must be between %1$s and %2$s.</string>
    <string name="month_name_format">MMMM yyyy</string>
    <string name="goto_start" msgid="8979658707407220934">"Library"</string>
    <string name="party_shuffle" msgid="8213359225506006168">"Party shuffle"</string>
    <string name="party_shuffle_off" msgid="1828744483354711679">"Party shuffle off"</string>
    <string name="delete_item" msgid="3363330144534750601">"Delete"</string>
    <string name="shuffle_all" msgid="1388193611787878773">"Shuffle all"</string>
    <string name="play_all" msgid="6309622568869321842">"Play all"</string>
    <string name="delete_artist_desc" msgid="8665759524898379194">"Permanently delete all songs by <xliff:g id="ARTIST">%s</xliff:g> from the SD card?"</string>
    <string name="delete_artist_desc_nosdcard" msgid="5729059309796497914">"Permanently delete all songs by <xliff:g id="ARTIST">%s</xliff:g> from USB storage?"</string>
    <string name="delete_album_desc" msgid="8172412873562794429">"Permanently delete the entire album \"<xliff:g id="ALBUM">%s</xliff:g>\" from the SD card?"</string>
    <string name="delete_album_desc_nosdcard" msgid="8612559166069885285">"Permanently delete the entire album \"<xliff:g id="ALBUM">%s</xliff:g>\" from USB storage?"</string>
    <string name="delete_song_desc" msgid="1842681623848282205">"Permanently delete \"<xliff:g id="SONG">%s</xliff:g>\" from the SD card?"</string>
    <string name="delete_song_desc_nosdcard" msgid="5064973032624148730">"Permanently delete \"<xliff:g id="SONG">%s</xliff:g>\" from USB storage?"</string>
    <string name="delete_confirm_button_text" msgid="7008121194944357274">"OK"</string>
    <plurals name="NNNtracksdeleted" formatted="false" msgid="2499334199042190643">
        <item quantity="other"><xliff:g id="SONGS_TO_DELETE">%d</xliff:g> songs were deleted.</item>
        <item quantity="one">1 song was deleted.</item>
    </plurals>
    <string name="scanning" msgid="3529383847223198502">"Scanning SD card…"</string>
    <string name="scanning_nosdcard" msgid="8105284774487360148">"Scanning USB storage…"</string>
    <string name="nowplaying_title" msgid="8342523844307751761">"Now playing"</string>
    <string name="partyshuffle_title" msgid="6582413231529992125">"Party shuffle"</string>
    <string name="artists_title" msgid="8490372367259160067">"Artists"</string>
    <string name="albums_menu" msgid="5807982055590211900">"Albums"</string>
    <string name="albums_title" msgid="8773880394961378035">"Albums"</string>
    <string name="tracks_menu" msgid="6942246568246092330">"Songs"</string>
    <string name="tracks_title" msgid="3229389424532295124">"Songs"</string>
    <string name="playlists_menu" msgid="5382792649771928849">"Playlists"</string>
    <string name="playlists_title" msgid="5094238486322957927">"Playlists"</string>
    <string name="videos_title" msgid="2066741954354129115">"Videos"</string>
    <string name="all_title" msgid="6880186414437237653">"All media"</string>
    <string name="browse_menu" msgid="5248122473075843289">"Artists"</string>
    <string name="search_title" msgid="1016971653383739344">"Search"</string>
    <string name="no_tracks_title" msgid="8805805388271238471">"No songs"</string>
    <string name="no_videos_title" msgid="6218814130364793104">"No videos"</string>
    <string name="no_playlists_title" msgid="4456351945617594418">"No playlists"</string>
    <string name="delete_playlist_menu" msgid="8998637685583495247">"Delete"</string>
    <string name="edit_playlist_menu" msgid="571618502105370684">"Edit"</string>
    <string name="rename_playlist_menu" msgid="3133463747389494668">"Rename"</string>
    <string name="playlist_deleted_message" msgid="9008053828193961455">"Playlist deleted."</string>
    <string name="playlist_renamed_message" msgid="7187580192703005990">"Playlist renamed."</string>
    <string name="recentlyadded" msgid="110978416756366953">"Recently added"</string>
    <string name="recentlyadded_title" msgid="3153322287249901914">"Recently added"</string>
    <string name="podcasts_listitem" msgid="8657809279717670634">"Podcasts"</string>
    <string name="podcasts_title" msgid="4928414142496858304">"Podcasts"</string>
    <string name="sdcard_missing_title" msgid="9008284946643270850">"No SD card"</string>
    <string name="sdcard_missing_title_nosdcard" msgid="7984839174824243958">"No USB storage"</string>
    <string name="sdcard_missing_message" msgid="2100061456003981823">"Your phone doesn\'t have an SD card inserted."</string>
    <string name="sdcard_missing_message_nosdcard" msgid="4459620970330194881">"Your phone doesn\'t have USB storage."</string>
    <string name="sdcard_busy_title" msgid="1162763571147174655">"SD card unavailable"</string>
    <string name="sdcard_busy_title_nosdcard" msgid="3319125156566499501">"USB storage unavailable"</string>
    <string name="sdcard_busy_message" msgid="579981082201215537">"Your SD card is busy."</string>
    <string name="sdcard_busy_message_nosdcard" msgid="1493449756827869166">"Your USB storage is busy."</string>
    <string name="sdcard_error_title" msgid="165682155008600643">"SD card error"</string>
    <string name="sdcard_error_title_nosdcard" msgid="7564338137076303931">"USB storage error"</string>
    <string name="sdcard_error_message" msgid="4574563894036627855">"An error was encountered on your SD card."</string>
    <string name="sdcard_error_message_nosdcard" msgid="4983430848526821234">"An error was encountered on your USB storage."</string>
    <string name="unknown_artist_name" msgid="5567811106415855219">"Unknown artist"</string>
    <string name="unknown_album_name" msgid="8525145988941244727">"Unknown album"</string>
    <string name="shuffle_on_notif" msgid="5453708337808483943">"Shuffle is on."</string>
    <string name="shuffle_off_notif" msgid="4251189610017886263">"Shuffle is off."</string>
    <string name="repeat_off_notif" msgid="1149406899083479716">"Repeat is off."</string>
    <string name="repeat_current_notif" msgid="1227153936360904196">"Repeating current song."</string>
    <string name="repeat_all_notif" msgid="6443293055987316642">"Repeating all songs."</string>
    <string name="ringtone_menu" msgid="2737472190159134599">"Use as phone ringtone"</string>
    <string name="ringtone_menu_short" msgid="3367622038867238133">"Use as ringtone"</string>
    <string name="ringtone_set" msgid="5325818347613843130">"\"<xliff:g id="NAME">%s</xliff:g>\" set as phone ringtone."</string>
    <string name="play_selection" msgid="2854921021814550018">"Play"</string>
    <string name="add_to_playlist" msgid="7110273488645072783">"Add to playlist"</string>
    <string name="queue" msgid="2937629819482787704">"Current playlist"</string>
    <string name="new_playlist" msgid="7588112979692632867">"New"</string>
    <string name="new_playlist_name_template" msgid="905710296728900597">"New playlist <xliff:g id="NUMBER">%d</xliff:g>"</string>
    <plurals name="NNNtrackstoplaylist" formatted="false" msgid="4679501954832581077">
        <item quantity="other"><xliff:g id="NUMBER">%d</xliff:g> songs added to playlist.</item>
        <item quantity="one">1 song added to playlist.</item>
    </plurals>
    <string name="emptyplaylist" msgid="6711555673997896344">"Selected playlist is empty."</string>
    <string name="create_playlist_create_text" msgid="8149755205483279143">"Save"</string>
    <string name="create_playlist_overwrite_text" msgid="2007808383561024706">"Overwrite"</string>
    <string name="service_start_error_title" msgid="8649916852210198813">"Playback problem"</string>
    <string name="service_start_error_msg" msgid="7061754255330276478">"The song couldn\'t be played."</string>
    <string name="service_start_error_button" msgid="480888406592240723">"OK"</string>
    <string-array name="weeklist">
        <item msgid="7005918873419323862">"1 week"</item>
        <item msgid="7487749116155425822">"2 weeks"</item>
        <item msgid="1565338360539555185">"3 weeks"</item>
        <item msgid="2142986059836933072">"4 weeks"</item>
        <item msgid="4332403875260507291">"5 weeks"</item>
        <item msgid="3847281907869868565">"6 weeks"</item>
        <item msgid="2942654998558867799">"7 weeks"</item>
        <item msgid="2115529325850052227">"8 weeks"</item>
        <item msgid="1396675336665198092">"9 weeks"</item>
        <item msgid="3178819129208998649">"10 weeks"</item>
        <item msgid="2727959579637914171">"11 weeks"</item>
        <item msgid="8708754966127584739">"12 weeks"</item>
    </string-array>
    <string name="weekpicker_set" msgid="7636608790418067496">"Done"</string>
    <string name="weekpicker_title" msgid="699535378922101701">"Set time"</string>
    <string name="save_as_playlist" msgid="5180413608901885255">"Save as playlist"</string>
    <string name="clear_playlist" msgid="4565515100924905315">"Clear playlist"</string>
    <string name="musicbrowserlabel" msgid="3162022214114562892">"Music"</string>
    <string name="done">done</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="original">Original</string>
    <string name="square">Square</string>
    <string name="_3x2">3 X 2</string>
    <string name="_3x5">3 X 5</string>
    <string name="_4x3">4 X 3</string>
    <string name="_4x6">4 X 6</string>
    <string name="_5x7">5 X 7</string>
    <string name="_8x10">8 X 10</string>
    <string name="_16x9">16 X 9</string>
    <string name="cancel_text">Cancel</string>
</resources>