<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/original"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="10dp"
            android:text="@string/original"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/body_grey"/>
        <TextView
            android:id="@+id/square"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="10dp"
            android:text="@string/square"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/body_grey"/>
        <TextView
            android:id="@+id/_3x2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="10dp"
            android:text="@string/_3x2"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/body_grey"/>
        <TextView
            android:id="@+id/_3x5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="10dp"
            android:text="@string/_3x5"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/body_grey"/>
        <TextView
            android:id="@+id/_4x3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="10dp"
            android:text="@string/_4x3"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/body_grey"/>
        <TextView
            android:id="@+id/_4x6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="10dp"
            android:text="@string/_4x6"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/body_grey"/>
        <TextView
            android:id="@+id/_5x7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="10dp"
            android:text="@string/_5x7"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/body_grey"/>
        <TextView
            android:id="@+id/_8x10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="10dp"
            android:text="@string/_8x10"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/body_grey"/>
        <TextView
            android:id="@+id/_16x9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="10dp"
            android:text="@string/_16x9"/>

        <Button
            android:id="@+id/closeCropRatioDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/body_grey"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel_text"
            android:textColor="@color/black"

            android:textSize="20sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>