<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:background="@color/white">
        <TextView
            android:id="@+id/imageCropBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_12dp"
            android:layout_weight="1"
            android:text="@string/cancel_text"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_12dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/imageCropDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_12dp"
            android:layout_weight="1"
            android:text="@string/done"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/subtle_gray" />

    <com.theartofdev.edmodo.cropper.CropImageView
        android:id="@+id/cropImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        >


        <TextView
            android:id="@+id/editPhoto"
            android:layout_width="wrap_content"
            android:padding="20dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_photo"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>